# F-Scheme

./: .gitignore  Main.hs  README.md  f-scheme.cabal  haskell-scheme.cabal
app/: Env.hs  Eval.hs  IOPrimitive.hs  LispError.hs  LispParser.hs  LispPrimitive.hs  LispPrimitives.hs  LispVal.hs  LispVal.hs-boot  Main.hs  Repl.hs  ThrowsError.hs  Unpacker.hs  Utils.hs
app/lib/: for.scm  if.scm  macros.scm  std.scm
app/src/: Env.hs  Env.hs-boot  Eval.hs  Eval.hs-boot  LispError.hs  LispParser.hs  LispVal.hs  Main.hs  Parser.hs  Repl.hs  Unpacker.hs
app/src/FScheme/Core/: Environment.hs  Error.hs  Evaluator.hs  Evaluator.hs-boot
app/src/FScheme/Parser/: Parser.hs
app/src/FScheme/Primitive/: Functions.hs
app/src/Lisp/: Error.hs  Primitive.hs  Val.hs  Val.hs-boot
app/src/Primitives/: LispPrimitive.hs
app/src/Util/: Flow.hs  Unpacker.hs
src/FScheme/Core/: Environment.hs  Environment.hs-boot  Evaluator.hs  Expander.hs  Expander.hs-boot  Types.hs  Types.hs-boot
src/FScheme/Parser/: Parser.hs
src/FScheme/Primitive/: Functions.hs
src/FScheme/REPL/: Console.hs
src/Util/: Flow.hs  Unpacker.hs
test/: CoreSpec.hs  test_suite.py
test/cases/core/: answer.txt  test.scm
test/cases/environment/: answer.txt  test.scm
test/cases/error/: answer.txt  test.scm
test/cases/example/: answer.txt  test.scm
test/cases/parser/: answer.txt  test.scm
test/cases/primitive/: answer.txt  test.scm
