cabal-version:      2.4
name:               f-scheme
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        FScheme.Core.Types
        FScheme.Core.Error
        FScheme.Core.Environment
        FScheme.Core.Evaluator
        FScheme.Parser.Parser
        FScheme.Primitive.Functions
        FScheme.REPL.Console
        Util.Unpacker
        Util.Flow

    default-extensions: ExistentialQuantification
    build-depends: base >=4.17.2.1, parsec, mtl, transformers
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall

executable f-scheme
  main-is:          Main.hs
  build-depends: base, f-scheme
  hs-source-dirs: app
  default-language: Haskell2010
  ghc-options: -Wall

test-suite f-scheme-test
    type:                exitcode-stdio-1.0
    main-is:             Spec.hs
    hs-source-dirs:      test
    build-depends:
        base,
        hspec,
        f-scheme
    build-tool-depends:  hspec-discover:hspec-discover
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
